--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   device_preview: ^1.2.0
   email_validator: ^3.0.0
   flutter_quill: ^10.5.2
+  fpdart: ^1.1.0
   
 dev_dependencies:
   flutter_test:
