--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,8 +54,8 @@ dependencies:
   flutter_quill: ^10.5.2
   fpdart: ^1.1.0
   overlay_loader_with_app_icon: ^0.0.4
+  flutter_secure_storage: ^9.2.2
 
-  
 dev_dependencies:
   flutter_test:
     sdk: flutter
