--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   fpdart: ^1.1.0
   overlay_loader_with_app_icon: ^0.0.4
   flutter_secure_storage: ^9.2.2
+  bloc_concurrency: ^0.2.5
 
 dev_dependencies:
   flutter_test:
